--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Task Manager</title>
 </head>
 
-<body>
+<body onload="loadInitialCardData()">
 
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
